# zvln-fluxer

./: .dockerignore  .envrc  .gitattributes  .gitignore  .ignore  .prettierignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  biome.json  deny.toml  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
fluxer_admin/: Cargo.toml  Dockerfile  build.rs  openapi-admin.json  package.json
fluxer_admin/src/: acl.rs  admin_flags.rs  lib.rs  main.rs  oauth2.rs  session.rs  state.rs
fluxer_admin/src/api/: admin_api_keys.rs  applications.rs  archives.rs  assets.rs  audit.rs  bans.rs  billing.rs  bulk.rs  client.rs  codes.rs  discovery.rs  generated.rs  guild_assets.rs  guilds.rs  instance_config.rs  jobs.rs  limit_config.rs  messages.rs  mod.rs  reports.rs  search.rs  system.rs  system_dm.rs  users.rs  voice.rs
fluxer_admin/src/config/: mod.rs
fluxer_admin/src/middleware/: auth.rs  csrf.rs  error_handler.rs  flash.rs  htmx.rs  mod.rs  self_hosted.rs
fluxer_admin/src/routes/: admin.rs  applications.rs  auth.rs  bans.rs  bans_actions.rs  codes.rs  discovery.rs  guild_tabs.rs  guilds.rs  jobs.rs  message_actions.rs  messages.rs  mod.rs  reports.rs  system.rs  user_actions.rs  user_tabs.rs  users.rs  voice.rs  voice_actions.rs
fluxer_admin/src/styles/: app.css
fluxer_admin/src/templates/: layout.rs  layout_header.rs  layout_scripts.rs  layout_sidebar.rs  layout_sidebar_nav.rs  mod.rs
fluxer_admin/src/utils/: bigint.rs  forms.rs  mod.rs  timestamps.rs
fluxer_admin/static/: htmx.min.js
fluxer_admin/tests/: api_deserialization.rs  htmx_acceptance.rs  parity.rs
fluxer_admin/tests/parity/: api_fixtures.rs  capture.rs  html_normalizer.rs  mod.rs  reference_worktree.rs  servers.rs
fluxer_app/rust/libfluxcore/: Cargo.toml
fluxer_app_proxy/: Cargo.toml  Dockerfile  docker-bake.hcl
fluxer_app_proxy/src/: bootstrap.rs  config.rs  csp.rs  discovery_cache.rs  frozen_snapshots.rs  geoip.rs  invite_meta.rs  lib.rs  main.rs  state.rs  time_freeze.rs
fluxer_app_proxy/src/routes/: android_association.rs  apple_association.rs  assets_proxy.rs  health.rs  mod.rs  spa_index.rs  spa_static.rs
fluxer_common/: Cargo.toml
fluxer_common/src/: config.rs  geoip.rs  lib.rs
fluxer_desktop/native/audio-apm/: Cargo.toml
fluxer_desktop/native/audio-mix/: Cargo.toml
fluxer_desktop/native/encoder-ring/: Cargo.toml  build.rs
fluxer_desktop/native/gpu-rebuild/: Cargo.toml
fluxer_desktop/native/linux-audio-capture/: Cargo.toml  index.d.ts  index.js  index.test.mjs  package.json
fluxer_desktop/native/linux-evdev/: Cargo.toml  index.d.ts  index.js  package.json
fluxer_desktop/native/linux-input-hook/: Cargo.toml  index.d.ts  index.js  package.json
fluxer_desktop/native/linux-notifications/: Cargo.toml  index.d.ts  index.js  package.json
fluxer_desktop/native/linux-portals/: Cargo.toml  index.d.ts  index.js  package.json
fluxer_desktop/native/linux-screen-capture/: Cargo.toml  THIRD_PARTY_OBS_VKCAPTURE.md  index.d.ts  index.js  index.test.mjs  package.json
fluxer_desktop/native/mac-app-audio/: Cargo.toml  build.rs  index.d.ts  index.js  index.test.mjs  package.json
fluxer_desktop/native/mac-clipboard/: Cargo.toml  index.d.ts  index.js  package.json
fluxer_desktop/native/mac-screen-capture/: Cargo.toml  build.rs  index.d.ts  index.js  index.test.mjs  package.json
fluxer_desktop/native/mac-sysctl/: Cargo.toml  index.d.ts  index.js  package.json
fluxer_desktop/native/macos-input-hook/: Cargo.toml  index.d.ts  index.js  package.json
fluxer_desktop/native/nv12-gpu-pack/: Cargo.toml
fluxer_desktop/native/platform-info/: Cargo.toml  build.rs  index.d.ts  index.js  package.json
fluxer_marketing/: Cargo.toml  Dockerfile  build.rs  package.json
fluxer_marketing/content/blog/: how-i-built-fluxer-a-discord-like-chat-app.mdx  mobile-clients-and-fluxer-v2.mdx  roadmap-2026.mdx
fluxer_marketing/content/jobs/: community-lead.md  platform-engineer.md  privacy-and-legal-counsel.md  product-engineer.md  support-specialist.md  trust-and-safety-specialist.md
fluxer_marketing/content/policies/: changelog.md  company-information.md  guidelines.md  privacy.md  security.md  terms.md
fluxer_marketing/locales/: ar.po  auto-i18n-reviewed-unchanged.json  bg.po  cs.po  da.po  de.po  el.po  en-GB.po  en-US.po  es-419.po  es-ES.po  fi.po  fr.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ko.po  lt.po  nl.po  no.po  pl.po  pt-BR.po  ro.po  ru.po  sv-SE.po  th.po  tr.po  uk.po  vi.po  zh-CN.po  zh-TW.po
fluxer_marketing/src/: config.rs  downloads.rs  geoip.rs  invariant_text.rs  lib.rs  main.rs  pricing.rs  rate_limit.rs  request_context.rs  routes.rs  swish.rs
fluxer_marketing/src/content/: mod.rs
fluxer_marketing/src/i18n/: descriptors.rs  mod.rs
fluxer_marketing/src/styles/: app.css
fluxer_marketing/src/templates/: blog.rs  donations.rs  icons.rs  marketing_pages.rs  mod.rs  pwa.rs  voice_regions.rs
fluxer_marketing/static/blog/: discord-ui-revolutionary-1280.avif  discord-ui-revolutionary-1881.avif  discord-ui-revolutionary-640.avif  discord-ui-revolutionary-960.avif  how-i-built-fluxer-cover-1280.avif  how-i-built-fluxer-cover-2000.avif  how-i-built-fluxer-cover-640.avif  how-i-built-fluxer-cover-960.avif  (+11 more)
fluxer_marketing/tests/: routes.rs
fluxer_media_proxy/fuzz/: Cargo.toml
fluxer_messages/: Cargo.toml  Dockerfile
fluxer_messages/benches/: message_response.rs
fluxer_messages/src/: lib.rs  main.rs  mention_extractor.rs  router_impl.rs  shard_impl.rs  types.rs  udt.rs
fluxer_messages/tests/: message_response_logic.rs
fluxer_snowflakes/: Cargo.toml  Dockerfile
fluxer_snowflakes/src/: generator.rs  main.rs  router_impl.rs  shard_impl.rs  types.rs
fluxer_svc/: Cargo.toml
fluxer_svc/src/: cache.rs  config.rs  hash_ring.rs  lib.rs  metrics.rs  postgres.rs  router.rs  scylla.rs  server.rs  shard.rs  shutdown.rs  transport.rs
fluxer_users/: Cargo.toml  Dockerfile
fluxer_users/src/: main.rs  router_impl.rs  shard_impl.rs  types.rs
tools/ci/: Cargo.toml
tools/dev/: Cargo.toml  cassandra_target_schema.json
tools/i18n_auto/: Cargo.toml
(+6725 files in other folders)
