[package]
name = "fluxer_common"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.102"
aws-credential-types = "1.2.14"
aws-sigv4 = "1.4.5"
axum = { version = "0.8.9", default-features = false }
maxminddb = "0.28.1"
moka = { version = "0.12.15", features = ["sync"] }
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "rustls"] }
serde_json = "1.0.150"
time = { version = "0.3.47", features = ["formatting", "macros", "parsing"] }
tracing = "0.1.44"
urlencoding = "2.1.3"
