[package]
name = "fluxer_marketing"
version = "0.1.0"
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
accept-language = "3.1.0"
ammonia = "4.1.2"
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["macros"] }
base64 = "0.22.1"
fluxer_common = { path = "../fluxer_common" }
comrak = { version = "0.52.0", default-features = false }
cookie = "0.18.1"
email_address = "0.2.9"
gettext = "0.4.0"
hmac = "0.13.0"
icu_datetime = "2.2.0"
icu_locale = "2.2.0"
maud = { version = "0.27.0", features = ["axum"] }
mime_guess = "2.0.5"
moka = { version = "0.12.15", features = ["future", "sync"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
time = { version = "0.3.47", features = ["formatting", "macros", "parsing"] }
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.11", features = ["compression-gzip", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
urlencoding = "2.1.3"

[build-dependencies]
polib = "0.3.0"
syn = { version = "2.0.117", features = ["full", "visit"] }

[dev-dependencies]
http-body-util = "0.1.3"
