[package]
name = "fluxer-messages"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
chrono = { version = "0.4.45", default-features = false, features = ["serde"] }
fluxer-svc = { path = "../fluxer_svc" }
fluxer_markdown_parser = { path = "../packages/markdown_parser/rust" }
futures = "0.3.32"
hmac = "0.13.0"
linkify = "0.11.0"
mime_guess = "2.0.5"
moka = { version = "0.12.15", features = ["future", "sync"] }
rmp-serde = "1.3"
scylla = { version = "1.6.0", features = ["chrono-04"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.44"
url = "2.5.8"

[dev-dependencies]
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "message_response"
harness = false

[features]
default = []
scylla = ["dep:scylla", "fluxer-svc/scylla"]
