[package]
name = "fluxer-snowflakes"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.102"
fluxer-svc = { path = "../fluxer_svc", default-features = false }
rmp-serde = "1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.44"
