[package]
name = "fluxer-svc"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.102"
async-nats = "0.49"
async-trait = "0.1"
axum = { version = "0.8.9", default-features = false, features = ["http1", "tokio"] }
bytes = "1"
chrono = { version = "0.4.45", default-features = false, features = ["std"] }
deadpool-postgres = "0.14"
futures = "0.3"
libc = "0.2"
moka = { version = "0.12.15", features = ["future"] }
rmp-serde = "1.3"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.2"
scylla = { version = "1.6.0", features = ["chrono-04"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
tokio-postgres-rustls = { version = "0.14", features = ["native-certs", "ring"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }

[features]
default = []
scylla = ["dep:scylla"]
