[package]
name = "fluxer-users"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4", default-features = false }
fluxer-svc = { path = "../fluxer_svc" }
futures = "0.3.32"
moka = { version = "0.12.15", features = ["future", "sync"] }
rmp-serde = "1.3"
scylla = { version = "1.6.0", features = ["chrono-04"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.44"

[features]
default = []
scylla = ["dep:scylla", "fluxer-svc/scylla"]
