[package]
name = "fluxer-media-proxy-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
fluxer-media-proxy = {path = ".."}

[workspace]
members = ["."]

[[bin]]
name = "parsers"
path = "fuzz_targets/parsers.rs"
test = false
doc = false
bench = false

[[bin]]
name = "signing_external_path"
path = "fuzz_targets/signing_external_path.rs"
test = false
doc = false
bench = false

[[bin]]
name = "thumbhash"
path = "fuzz_targets/thumbhash.rs"
test = false
doc = false
bench = false
