[package]
name = "fluxer-ci"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1.0.102"
aws-config = "1.8.18"
aws-sdk-s3 = "1.135.0"
base64 = "0.22.1"
bytes = "1.11.1"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
flate2 = "1.1.9"
hex = "0.4.3"
md-5 = "0.11.0"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tar = "0.4.46"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
walkdir = "2.5.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
