[package]
name = "fluxer_audio_apm"
version = "0.0.0"
edition = "2024"
license = "AGPL-3.0-or-later"
publish = false

[workspace]
resolver = "2"

[lib]
crate-type = ["rlib"]

[features]
default = []
real-apm = [
    "dep:webrtc-audio-processing",
    "dep:webrtc-audio-processing-config",
    "webrtc-audio-processing/bundled",
]

[dependencies]
webrtc-audio-processing = {version = "2.1", optional = true}
webrtc-audio-processing-config = {version = "2.1", optional = true}

[dev-dependencies]
