[package]
name = "fluxer_audio_mix"
version = "0.0.0"
edition = "2024"
license = "AGPL-3.0-or-later"
publish = false

[workspace]
resolver = "2"

[lib]
crate-type = ["rlib"]

[dependencies]
rtrb = "0.3"
fluxer_rt_thread = {path = "../rt-thread"}

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "mix"
harness = false
