[package]
name = "fluxer_gpu_rebuild"
version = "0.0.0"
edition = "2024"
license = "AGPL-3.0-or-later"
publish = false

[workspace]
resolver = "2"

[lib]
crate-type = ["rlib"]

[features]
default = []
wgpu = ["dep:wgpu"]

[dependencies]
parking_lot = "0.12"
wgpu = { version = "29", optional = true, default-features = false }

[dev-dependencies]
parking_lot = "0.12"
