[package]
name = "fluxer_linux_audio_capture"
version = "0.0.0"
edition = "2024"
license = "AGPL-3.0-or-later"
publish = false

[workspace]
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = {version = "3.9.1", default-features = false, features = ["dyn-symbols", "napi8"]}
napi-derive = "3.5.6"
fluxer_rt_thread = {path = "../rt-thread"}
fluxer_audio_mix = {path = "../audio-mix"}
fluxer_audio_apm = {path = "../audio-apm"}
fluxer_audio_timing = {path = "../audio-timing"}
fluxer_screen_frame_bus = {path = "../screen-frame-bus"}

[target.'cfg(target_os = "linux")'.dependencies]
pipewire = "0.10.0"

[build-dependencies]
napi-build = "2.3.2"

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "end_to_end"
harness = false
