[package]
name = "fluxer_linux_input_hook"
version = "0.0.0"
edition = "2024"
license = "AGPL-3.0-or-later"
publish = false

[workspace]
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = {version = "3.9.1", default-features = false, features = ["dyn-symbols", "napi8"]}
napi-derive = "3.5.6"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = {version = "0.13.2", default-features = false, features = ["record"]}

[build-dependencies]
napi-build = "2.3.2"
