[package]
name = "fluxer_linux_notifications"
version = "0.0.0"
edition = "2024"
license = "AGPL-3.0-or-later"
publish = false

[workspace]
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-io = "2.6.0"
futures-lite = "2.6.1"
napi = {version = "3.9.1", default-features = false, features = ["dyn-symbols", "napi8"]}
napi-derive = "3.5.6"
zbus = "5.16.0"

[build-dependencies]
napi-build = "2.3.2"
