[package]
name = "fluxer_mac_app_audio"
version = "0.0.0"
edition = "2024"
license = "AGPL-3.0-or-later"
publish = false

[workspace]
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = {version = "3.9.1", default-features = false, features = ["dyn-symbols", "napi8", "async"]}
napi-derive = "3.5.6"
parking_lot = "0.12"

[target.'cfg(target_os = "macos")'.dependencies.fluxer_screen_frame_bus]
path = "../screen-frame-bus"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.186"
objc2 = "0.6"
objc2-foundation = {version = "0.3", features = ["NSString", "NSArray", "NSDictionary", "NSError", "NSValue", "NSBundle", "NSProcessInfo"]}
objc2-screen-capture-kit = {version = "0.3", features = ["SCStream", "SCShareableContent", "objc2-core-graphics", "objc2-core-media", "objc2-core-foundation", "block2", "dispatch2", "libc"]}
objc2-core-audio = {version = "0.3", features = ["AudioHardware", "AudioHardwareDeprecated", "HostTime", "objc2-core-audio-types", "objc2-foundation"]}
objc2-core-audio-types = "0.3"
objc2-core-media = "0.3"
objc2-core-foundation = {version = "0.3", features = ["CFArray", "CFDictionary", "CFNumber", "CFString", "CFBase"]}
objc2-core-graphics = {version = "0.3.2", default-features = false, features = ["std", "CGWindow"]}
block2 = "0.6"
dispatch2 = "0.3"

[build-dependencies]
napi-build = "2.3.2"
