[package]
name = "fluxer_nv12_gpu_pack"
version = "0.0.0"
edition = "2024"
license = "AGPL-3.0-or-later"
publish = false

[workspace]
resolver = "2"

[lib]
crate-type = ["rlib"]

[dependencies]
wgpu = "29"
bytemuck = {version = "1.25", features = ["derive"]}
pollster = "0.4"
parking_lot = "0.12"
fluxer_gpu_rebuild = {path = "../gpu-rebuild", features = ["wgpu"]}

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "pack"
harness = false
