[package]
name = "fluxer_platform_info"
version = "0.0.0"
edition = "2024"
license = "AGPL-3.0-or-later"
publish = false

[workspace]
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fluxer_desktop_native = {path = "../rust"}
napi = {version = "3.9.1", default-features = false, features = ["dyn-symbols", "napi8"]}
napi-derive = "3.5.6"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = {version = "0.6.4", features = ["exception"]}
objc2-foundation = {version = "0.3.2", default-features = false, features = ["NSArray", "NSObject", "NSString", "std"]}
objc2-metal = {version = "0.3.2", default-features = false, features = ["MTLDevice", "std"]}

[target.'cfg(target_os = "windows")'.dependencies]
windows = {version = "0.62.2", features = [
	"Win32_Foundation",
	"Win32_Graphics_Dxgi",
]}

[build-dependencies]
napi-build = "2.3.2"

[dev-dependencies]
tempfile = "3.27"
